# HomePort

./: .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  Makefile  Makefile.am  README  README.md  a00001.html  a00002.html  a00003.html  a00003_source.html  a00004.html  a00004_a17434db8bd6d65f28a654b2ae3708b9b_cgraph.map  a00004_a17434db8bd6d65f28a654b2ae3708b9b_cgraph.md5  a00004_a17434db8bd6d65f28a654b2ae3708b9b_icgraph.map  a00004_a17434db8bd6d65f28a654b2ae3708b9b_icgraph.md5  a00004_a257c5aafa157f3902bec16554a5a80b2_cgraph.map  a00004_a257c5aafa157f3902bec16554a5a80b2_cgraph.md5  a00004_a2b2154654e3a71fc5cf31a82125b1aac_cgraph.map  a00004_a2b2154654e3a71fc5cf31a82125b1aac_cgraph.md5  a00004_a2ba2998e37246c16c9707e7e5c2730de_cgraph.map  a00004_a2ba2998e37246c16c9707e7e5c2730de_cgraph.md5  a00004_a2ba2998e37246c16c9707e7e5c2730de_icgraph.map  a00004_a2ba2998e37246c16c9707e7e5c2730de_icgraph.md5  a00004_a2f1cba74d908da5b27db2338c6e222dc_cgraph.map  a00004_a2f1cba74d908da5b27db2338c6e222dc_cgraph.md5  a00004_a2f1cba74d908da5b27db2338c6e222dc_icgraph.map  a00004_a2f1cba74d908da5b27db2338c6e222dc_icgraph.md5  a00004_a30f7e7259072d4e929092bf994dd0f7e_cgraph.map  a00004_a30f7e7259072d4e929092bf994dd0f7e_cgraph.md5  a00004_a30f7e7259072d4e929092bf994dd0f7e_icgraph.map  a00004_a30f7e7259072d4e929092bf994dd0f7e_icgraph.md5  a00004_a3f36a139b8cf22a41850235ce3a3c88c_cgraph.map  a00004_a3f36a139b8cf22a41850235ce3a3c88c_cgraph.md5  a00004_a3f36a139b8cf22a41850235ce3a3c88c_icgraph.map  a00004_a3f36a139b8cf22a41850235ce3a3c88c_icgraph.md5  a00004_a665691f420dff4eebb8f4b4af62d7a49_cgraph.map  a00004_a665691f420dff4eebb8f4b4af62d7a49_cgraph.md5  a00004_a9a7791ffa0bda45533ca10f94c8183f1_cgraph.map  (+5704 more)
DataManager/: CMakeLists.txt
DataManager/include/: CMakeLists.txt  datamanager.h  hpd_adapter.h  hpd_configuration.h  hpd_datamanager.h  hpd_datamanager.h.in  (+2 more)
Doc/: README.md
Examples/: CMakeLists.txt  hpd_example_easy.c
Interface/: README  scenario.xsd
Misc/: CMakeLists.txt
OperationHandler/: CMakeLists.txt
REST/: CMakeLists.txt
Toolchains/: armhf.cmake
api/: CMakeLists.txt  api.dox
api/src/: CMakeLists.txt  api.c  daemon.c  daemon_api.c  discovery.c  discovery_api.c  discovery_id.c  event.c  event_api.c  log.c  log_api.c  request.c  request_api.c  value.c  value_api.c
common/: CMakeLists.txt
common/curl_ev/src/: CMakeLists.txt  curl_ev.c  curl_ev_intern.h  curl_ev_module.c  hpd_curl_ev.c
common/tcp-server/test/: CMakeLists.txt  big_data_test.c  load_test.c
example/: CMakeLists.txt
example/demo/: CMakeLists.txt  demo_adapter.c  demo_adapter.h  demo_application.c  demo_application.h  demo_main.c  main.c  requests.http  tutorial02.dox
hashtable/: hashtable.c  test.c
homeport/: CMakeLists.txt  README  configure.ac  doxygen.cfg  homeport.c
homeport/src/hpdaemon/: CMakeLists.txt  homeport.c  hpd_avahi_publish.c  hpd_device_configuration.c  hpd_device_configuration.h  hpd_events.c  hpd_events.h  hpd_log.c  hpd_server_sent_events.c  hpd_server_sent_events.h  hpd_services.c  hpd_web_server_core.c  hpd_web_server_interface.c  hpd_web_server_interface.h
hpd/: CMakeLists.txt  api.dox  intro.dox
hpd/src/: CMakeLists.txt  comm.h  daemon.c  daemon.h  daemon_api.c  discovery.c  discovery.h  discovery_api.c  discovery_id.c  event.c  event.h  event_api.c  log.c  log.h  log_api.c  model.h  request.c  request.h  request_api.c  value.c  value.h  value_api.c
http-webserver/: CMakeLists.txt
libHTTP/: module.mk  test_url_parser.c  url_parser.c  url_parser.h
libREST/: CMakeLists.txt
libRest/: libREST.h
libWebserver/: .libWebserver.h.swp  CMakeLists.txt  client.c  client.h  instance.c  instance.h  libWebserver.h  module.mk  request.c  request.h  request_test.c  response.h  ws_instance.c
libWebserver/src/: CMakeLists.txt  client.c  client.h  instance.c  instance.h  request.c  request.h  request_test.c  response.c  response.h  response_test.c
libWebserver/src/webserver-test/: CMakeLists.txt  Makefile  client.c  client.h  tests.c  tests.h  webserver_test.c
logger/: logger.h  module.mk
misc/: CMakeLists.txt
modules/: CMakeLists.txt
rest/: CMakeLists.txt
rest/http-webserver/src/: CMakeLists.txt  header_parser.c  header_parser.h  header_parser_test.c  http-webserver.c  http-webserver_test.c  request.c  request.h  response.c  url_parser.c  url_parser.h  url_parser_test.c
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  defines_7.js  defines_8.js  defines_9.js  defines_a.js  (+79 more)
src/: Makefile.am
src/examples/: CA_root_cert.pem  HPD-key.key  Makefile.am  client-browser-cert.p12  client-cert.pem  hpd-example.c  hpd.cfg  hpd_example.c  hpd_phidget.c  hpd_phidget.h  hpd_phidget_example.c  phidget-example.c  server.key  server.pem
src/hpdaemon/: Makefile.am  avahi_publish.c  avahi_publish.h  avahi_publish_client.c  avahi_publish_client.h  avahi_publish_core.c  avahi_publish_core.h  configurationXML.xml  devicedescription.xsd  homeport.c  hpd_avahi_publish.h  hpd_avahi_publish_client.h  hpd_avahi_publish_core.c  hpd_avahi_publish_core.h  hpd_configure.c  hpd_device_configuration.c  hpd_device_configuration.h  hpd_events.c  hpd_events.h  hpd_http_web_server.c  hpd_http_web_server.c~  hpd_http_web_server.h  hpd_https_web_server.c  hpd_https_web_server.c~  hpd_https_web_server.h  hpd_log.c  hpd_log.h  hpd_parameters.c  hpd_server_sent_events.c  hpd_server_sent_events.h  hpd_services.c  hpd_services.c~  hpd_web_server.c  hpd_web_server.c~  hpd_web_server.h  hpd_web_server_core.c  hpd_web_server_core.h  hpd_web_server_interface.c  hpd_web_server_interface.h  hpd_xml.c  (+18 more)
webserver/: CMakeLists.txt  module.mk  webserver.h  ws_request.c  ws_request.h
wsTester/: Makefile  client.c  client.h  main.c  tests.c  tests.h
(+483 files in other folders)
